fix: textChat with scrollbar

--- a/Front/PictoGo/src/app/module-principal/gameScene/gameScene.component.css
+++ b/Front/PictoGo/src/app/module-principal/gameScene/gameScene.component.css
@@ -25,8 +25,10 @@
 
 #chat{
   width: 90%;
-  height: 60%;
+  height: 400px;
+  margin-top: 147px;
   background-color: green;
+  overflow-y: scroll;
 }
 
 #player{
